--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,15 @@
   ga('create', 'UA-787904-11', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script>
+	function change(top, bottom)
+	{
+	parent.top_frame.location=top;
+	parent.content.location=bottom;
+	} 		
+</script>
+
 </head>
 <body>
 <h2>The Concierge Team</h2>
@@ -66,15 +75,15 @@
 <div class="hr dotted clearfix">&nbsp;</div>
 <a name="acknowledgements"></a><h2>Acknowledgements</h2>
 Numerous colleagues from the Natural Capital Project contributed to this website.  We would like to thank...<br>
-<b>Anne Guerry, Spencer Wood, Katie Arkema, Greg Guannel, Rob Griffin, Amy Rosenthal,<br>
-Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Yi Xi, Doug Denu,<br>
+<b>Anne Guerry, Spencer Wood, Katie Arkema, Greg Guannel, Rob Griffin, Amy Rosenthal,
+Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Yi Xi, Doug Denu,
 Mike Papenfus, Jeremy Davies, Matt Marsik, Susan Langridge, and Mary Ruckelshaus</b>
 <p></p>
 We also thank our partners, without whom this work would not have been possible...<br>
-<b>World Wildlife Fund (WWF), The Nature Conservancy (TNC), West Coast Aquatics,<br>Belize Coastal Zone Management Authority and Institute (CZMAI),<br>Northeast Regional Ocean Council (NROC), Center for Ocean Solutions (COS),<br>Downstream Strategies, Barbados Coastal Zone Management Unit (CZMU),<br>Inter-American Development Bank (IDB), Healthy Reefs Initiative,<br>National Oceanic and Atmospheric Administration (NOAA), and many others.</b>
+<b>World Wildlife Fund (WWF), The Nature Conservancy (TNC), West Coast Aquatics,Belize Coastal Zone Management Authority and Institute (CZMAI), Northeast Regional Ocean Council (NROC), Center for Ocean Solutions (COS), Downstream Strategies, Barbados Coastal Zone Management Unit (CZMU), Inter-American Development Bank (IDB), Healthy Reefs Initiative, National Oceanic and Atmospheric Administration (NOAA), and many others.</b>
 <p></p>
 Beta testing and design input were provided by...<br>
-<b>Amélie Augé, Jorge Ramirez, Britta Heine, Jan Kleine Büning,<br>Brazilian Future Ocean Panel (PainelMar), Mike Barrett,<br> Libby Whiting, Leo Dutra, Adam Kowalski, Holger Janssen,<br> Anne Walton, Sushmita Majumdar, and Hedley Grantham</b>
+<b>Amélie Augé, Jorge Ramirez, Britta Heine, Jan Kleine Büning, Brazilian Future Ocean Panel (PainelMar), Mike Barrett, Libby Whiting, Leo Dutra, Adam Kowalski, Holger Janssen, Anne Walton, Sushmita Majumdar, and Hedley Grantham</b>
 <p></p>
 This website was developed with support from the <b>Gordon and Betty Moore Foundation</b>.
 <p></p>
