--- a/marine_invest.html
+++ b/marine_invest.html
@@ -144,6 +144,15 @@ window.onload = function (evt) {
   ga('create', 'UA-787904-11', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script>
+	function change(top, bottom)
+	{
+	parent.top_frame.location=top;
+	parent.content.location=bottom;
+	} 		
+</script>
+
 </head>
 <body>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
@@ -154,8 +163,8 @@ Some of the models within InVEST can be applied for coastal-marine ecosystem ass
 <p></p><br><br>
 <ul id="folio_scroller">
 <li><span>Diagram showing potential linkages across InVEST models.  We consider a linkage to be when outputs of one model are used as inputs to another.</span><a href="img/invest_linkages.png" target="_blank"><img alt="" src="img/invest_linkages.png" /></a></li>
-<li><span>Risk posed to habitats by human uses, climate change and other stressors can alter ecosystem structure and function. The InVEST Habitat Risk Assessment uses literature review and expert elicitation to map and measure direct effects to habitats and changes in the distribution of ecosystem services in space.</span><img alt="" src="img/marine_invest_folio_3.png" /></li>
-<li><span>InVEST Marine Water Quality and Habitat Risk Assessment are supporting service models that enable users to map, measure and value final ecosystem services (e.g., coastal protection, fisheries production).</span><a href="img/invest_linkages.png" target="_blank"><img alt="" src="img/invest_linkages.png" /></a></li>
+<li><span>Risk posed to habitats by human uses, climate change and other stressors can alter ecosystem structure and function. The InVEST Habitat Risk Assessment uses literature review and expert elicitation to map and measure direct effects to habitats and changes in the distribution of ecosystem services.</span><img alt="" src="img/marine_invest_folio_3.png" /></li>
+<li><span>InVEST Marine Water Quality and Habitat Risk Assessment are supporting service models that enable users to map, measure and value final ecosystem services (e.g., coastal protection, fisheries production, tourism and recreation).</span><a href="img/invest_linkages.png" target="_blank"><img alt="" src="img/invest_linkages.png" /></a></li>
 <li><span>Human activities in the coastal zone such as recreation/tourism and fisheries underpin the economies of many coastal communities but also pose risk to habitats that offer important benefits to people.</span><img alt="" src="img/marine_invest_folio_2.png" /></li>
 </ul> 
 <p></p><br><br>
