--- a/scope.html
+++ b/scope.html
@@ -143,7 +143,17 @@ window.onload = function (evt) {
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-787904-11', 'auto');
   ga('send', 'pageview');
+
+</script>  
+  
+<script>
+	function change(top, bottom)
+	{
+	parent.top_frame.location=top;
+	parent.content.location=bottom;
+	} 		
 </script>
+  
 </head>
 <body>
 <h1>Step 1: Scope</h1>
@@ -152,11 +162,11 @@ It is difficult to overestimate the importance of the scoping step.  This is the
 <p></p>
 <img src="img/approach_Step1.png" usemap="#step1"><br>
 <map name="step1">
-  <area shape="circle" coords="235,85,55" href="data.html" alt="Data">
-  <area shape="circle" coords="365,85,55" href="scenarios.html" alt="Scenarios">
-  <area shape="circle" coords="499,85,55" href="analyze.html" alt="Analyze">
-  <area shape="circle" coords="634,86,55" href="synthesize.html" alt="Synthesize">
-  <area shape="circle" coords="765,85,55" href="communicate.html" alt="Communicate">
+  <area shape="circle" coords="235,85,55" href="javascript:change('top_data.html', 'data.html')">
+  <area shape="circle" coords="365,85,55" href="javascript:change('top_scenarios.html', 'scenarios.html')">
+  <area shape="circle" coords="499,85,55" href="javascript:change('top_analyze.html', 'analyze.html')">
+  <area shape="circle" coords="634,86,55" href="javascript:change('top_synthesize.html', 'synthesize.html')">
+  <area shape="circle" coords="765,85,55" href="javascript:change('top_communicate.html', 'communicate.html')">
 </map>
 Appropriate scoping serves to link the decisions, decision-makers, and scientific support staff to improve the quality of scientific outputs and ensure that results are salient, accessible and designed to meet real policy needs.<p></p>In our experience, scoping is most successful in driving action when it includes several essential tasks: 
 <ul>
@@ -165,7 +175,7 @@ Appropriate scoping serves to link the decisions, decision-makers, and scientifi
 <li>Identifying key decision questions</li> 
 <li>Selecting methods and tools for analysis</li>
 <li>Exploring available data </li>
-<li>Establishing a process to engage stakeholders that incorporates local knowledge and shares results along the way (see <a href="iterate.html"><b>Iterate</b></a> step)</li>
+<li>Establishing a process to engage stakeholders that incorporates local knowledge and shares results along the way (see <a href="javascript:change('top.html', 'iterate.html')"><b>Iterate</b></a> step)</li>
 <li>Developing a rapport and genuine respect between partners </li>
 <li>Matching work plans with external timelines (e.g., windows to affect policy) and available resources </li>
 <li>Identifying essential expertise (e.g., planner, project manager, GIS tech) and for which phases these skills are required</li> 
@@ -192,7 +202,7 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 <li>What are the ecosystem components people care most about?<br>(e.g., endangered species, special places, opportunities for important activities)</li>
 <li>What time horizon are you planning for?</li>
 <li>Who has the authority to do something with the information generated? Are they involved in the process or do they have good connections to it?</li>
-<li>Have we articulated clear, answerable questions?<br>(e.g., those that can be addressed in the <a href="analyze.html"><b>Analyze</b></a> step; see <a href="docs/Arkema_etal_2015_PNAS.pdf" target="_blank">Arkema et al. 2015</a>)</li>
+<li>Have we articulated clear, answerable questions?<br>(e.g., those that can be addressed in the <a href="javascript:change('top_analyze.html', 'analyze.html')"><b>Analyze</b></a> step; see <a href="docs/Arkema_etal_2015_PNAS.pdf" target="_blank">Arkema et al. 2015</a>)</li>
 <li>What is the timeline for the planning process and can we achieve our goals within the time allotted?</li>
 <li>How many iterations through the steps in this concierge do we intend to undertake?  Who can we consult for feedback along the way?</li>
 <li>Will the models and tools we have at our disposal answer the management and science questions we are asking?</li>
