--- a/welcome.html
+++ b/welcome.html
@@ -18,6 +18,7 @@
 				duration: 600
 			});
 		});
+		
 	</script>
 
 <style>
@@ -82,12 +83,20 @@ $(document).ready(function(){
 });
 </script>
 
+<script>
+	function change(top, bottom)
+	{
+	parent.top_frame.location=top;
+	parent.content.location=bottom;
+	} 		
+</script>
+
 </head>
 <body>
 
-<h1>Marine Planning Concierge</h1>
-<p>As 50 million people are born each year and similar numbers seek to raise their standard of living, the Earth's marine ecosystems face expanding pressure from fisheries, aquaculture, energy production, runoff from land, shipping, recreation, climate change, and more (<a href="http://www.millenniumassessment.org/en/index.html" target="_blank">Millennium Ecosystem Assessment 2005</a>, <a href="docs/Halpern_etal_2008_Science.pdf" target="_blank">Halpern et al. 2008</a>, and others). <u>With careful planning</u>, we can continue to derive benefits from oceans and coasts while protecting the natural capital that sustains life. <u>Without careful planning</u>, human activities will likely further degrade the oceans and squander the potential benefits provided by healthy marine ecosystems. To maintain and enhance the myriad benefits available from marine ecosystems, it has become clear that our oceans and coasts need better planning.
-<p></p>The concept of <b>marine planning</b> (also called <i>marine spatial planning</i>, <i>maritime planning</i>, <i>coastal development planning</i>, among other terms) calls for marine systems to be <b>managed for multiple uses, in ways that account for diverse benefits delivered by ecosystems to people</b>, and that guide the patterns and types of use to sustain ocean productivity for the needs of present and future generations (<a href="https://www.cbd.int/doc/publications/ea-text-en.pdf" target="_blank">Convention on Biological Diversity 2004</a>, <a href="https://www.whitehouse.gov/files/documents/OPTF_FinalRecs.pdf" target="_blank">CEQ 2010</a>, <a href="http://ec.europa.eu/environment/marine/pdf/1_EN_ACT.pdf" target="_blank">European Commission 2011</a>, <a href="http://www.un.org/depts/los/ecosystem_approaches/ecosystem_approaches.htm" target="_blank">UN General Assembly 2010</a>).  
+<h1>Concierge</h1>
+<img src="img/logo_Concierge.png" align="left">As 50 million people are born each year and similar numbers seek to raise their standard of living, the Earth's marine ecosystems face expanding pressure from fisheries, aquaculture, energy production, runoff from land, shipping, recreation, climate change, and more (<a href="http://www.millenniumassessment.org/en/index.html" target="_blank">Millennium Ecosystem Assessment 2005</a>, <a href="docs/Halpern_etal_2008_Science.pdf" target="_blank">Halpern et al. 2008</a>, and others). <u>With careful planning</u>, we can continue to derive benefits from oceans and coasts while protecting the natural capital that sustains life. <u>Without careful planning</u>, human activities will likely further degrade the oceans and squander the potential benefits provided by healthy marine ecosystems. To maintain and enhance the myriad benefits available from marine ecosystems, it has become clear that our oceans and coasts need better planning.
+<p></p>The concept of <b>marine planning</b> (also called <i>marine spatial planning</i>, <i>maritime planning</i>, <i>coastal development planning</i>, among other terms) calls for marine systems to be <b>managed for multiple uses, in ways that account for diverse benefits delivered by ecosystems to people</b>, and that guide the patterns and types of use to sustain ocean productivity for the needs of present and future generations (<a href="https://www.cbd.int/doc/publications/ea-text-en.pdf" target="_blank">CBD 2004</a>, <a href="https://www.whitehouse.gov/files/documents/OPTF_FinalRecs.pdf" target="_blank">CEQ 2010</a>, <a href="http://ec.europa.eu/environment/marine/pdf/1_EN_ACT.pdf" target="_blank">European Commission 2011</a>, <a href="http://www.un.org/depts/los/ecosystem_approaches/ecosystem_approaches.htm" target="_blank">UN General Assembly 2010</a>).  
 <p></p>
 Transforming the very appealing ideas of marine spatial planning into practical advice, guidance, and action on-the-ground and in-the-water, can be a complex and challenging process. Several proposed frameworks guide current planning (<a href="docs/Kittinger_etal_2014_FEE.pdf" target="_blank">Kittinger et al. 2014</a>, <a href="docs/Cornu_etal_2014_CB.pdf" target="_blank">Cornu et al. 2014</a>, <a href="http://www.marineplanning.org/pdf/msp_best_practices.pdf" target="_blank">Beck et al. 2009</a>, <a href="http://unesdoc.unesco.org/images/0018/001865/186559e.pdf" target="_blank">Ehler & Douvere 2009</a>, <a href="docs/Day_etal_2008_MP.pdf" target="_blank">Day 2008</a>), many of which suggest <b>incorporating ecosystem services and risk to habitats</b> as elements of planning (<a href="docs/Arkema_etal_2014_EL.pdf" target="_blank">Arkema et al. 2014</a>, <a href="docs/Koehn_etal_2013_MP.pdf" target="_blank">Koehn et al. 2013</a>). Technical tools within such frameworks can help add scientific rigor and transparency to spatial planning processes, but there is confusion over what they do and how they can be linked.<p></p>
 <ul id="folio_scroller">
@@ -96,11 +105,11 @@ Transforming the very appealing ideas of marine spatial planning into practical 
 <p></p><br>
 <p><b>We designed this concierge to make it easier to learn about, get inspired by, and implement marine spatial planning</b>. In particular, we focus on how to incorporate ecosystem service understanding into planning. With this tool, we hope to meet you where you are -- from nursing a fledgling interest in the topic to embarking on a full-blown planning process in your community, to everything in between. Just like the concierge in the lobby of a hotel, we've organized lots of information with the aim of helping you get what you need. The Marine Planning Concierge organizes existing technical approaches, information, and tools in a generalized spatial planning framework.</p>The steps we outline will help answer frequently asked questions about marine planning, including:
 <li>Where has marine planning already been implemented and by whom? (See <a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/global-environmental-change/sv1/news/new_guide_to_evaluating_marine_plans/#.VVTZ1o5Viko" target="_blank">Ehler et al. 2014</a> and <a href="http://www.oceanplanning.org" target="_blank">OceanPlanning.org</a>)</li>
-<li>How does one find and compile relevant spatial data? (<b><a href="data.html">Data</a></b>, step 2)</li>
-<li>When and how are <b><a href="scenarios.html">Scenarios</a></b> (step 3) useful in this process?</li>
-<li>There are many available decision-support tools I might use to <b><a href="analyze.html">Analyze</a></b> (step 4) my data and information. How do I make sense of them all?</li>
-<li>Many tools require specialized expertise to apply such as data pre-/post-processing.  Where can I get help? (<b><a href="analyze.html">Analyze</a></b> & <b><a href="synthesize.html">Synthesize</a></b>, steps 4-5)</li>
-<li>How can I effectively summarize technical information (<b><a href="synthesize.html">Synthesize</a></b> & <b><a href="communicate.html">Communicate</a></b>, steps 5-6)</li>
+<li>How does one find and compile relevant spatial data? (<b><a href="javascript:change('top_data.html', 'data.html')">Data</a></b>, step 2)</li>
+<li>When and how are <b><a href="javascript:change('top_scenarios.html', 'scenarios.html')">Scenarios</a></b> (step 3) useful in this process?</li>
+<li>There are many available decision-support tools I might use to <b><a href="javascript:change('top_analyze.html', 'analyze.html')">Analyze</a></b> (step 4) my data and information. How do I make sense of them all?</li>
+<li>Many tools require specialized expertise to apply such as data pre-/post-processing.  Where can I get help? (<b><a href="javascript:change('top_analyze.html', 'analyze.html')">Analyze</a></b> & <b><a href="javascript:change('top_synthesize.html', 'synthesize.html')">Synthesize</a></b>, steps 4-5)</li>
+<li>How can I effectively summarize technical information (<b><a href="javascript:change('top_synthesize.html', 'synthesize.html')">Synthesize</a></b> & <b><a href="javascript:change('top_communicate.html', 'communicate.html')">Reach Out</a></b>, steps 5-6)</li>
 <li>Where should I go for assistance when something goes wrong?</li>
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
@@ -122,16 +131,16 @@ Also, ecosystem services provide useful metrics for marine planning. They are, a
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>Suggested Marine Planning Approach</h2>
 In this guide we highlight an ecosystem service (ES) approach (<a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2013</a>) that can improve outcomes from an marine planning process. This means that during the planning process the focus is not just on the condition of the ecosystem itself, but also on the flow of benefits from ecosystems to people (or "ecosystem services"). Since this connection between environmental condition and human benefit is not typically considered in multi-objective ocean development and management, we offer a roadmap and resources for an ecosystem service approach to inform such spatial planning decisions.<p></p>
-Many marine planning approaches exist that converge around these common themes (<a href="links.html"><b>Links</b></a>). The Marine Planning Concierge draws on several such approaches, and adapts a general process for conducting decision-relevant assessments of ecosystem services to one tailored for the context of marine spatial planning (<a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">Rosenthal et al. 2014</a>).<p></p>
+Many marine planning approaches exist that converge around these common themes (<a href="javascript:change('top.html', 'links.html')"><b>Links</b></a>). The Marine Planning Concierge draws on several such approaches, and adapts a general process for conducting decision-relevant assessments of ecosystem services to one tailored for the context of marine spatial planning (<a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">Rosenthal et al. 2014</a>).<p></p>
 <center>
 <img src="img/approach_noInset.png" usemap="#noInset"><br>
 <map name="noInset">
-  <area shape="circle" coords="70,86,55" href="scope.html" alt="Scope">
-  <area shape="circle" coords="204,86,55" href="data.html" alt="Data">
-  <area shape="circle" coords="337,86,55" href="scenarios.html" alt="Scenarios">
-  <area shape="circle" coords="470,86,55" href="analyze.html" alt="Analyze">
-  <area shape="circle" coords="603,86,55" href="synthesize.html" alt="Synthesize">
-  <area shape="circle" coords="736,86,55" href="communicate.html" alt="Communicate">
+  <area shape="circle" coords="70,86,55" href="javascript:change('top_scope.html', 'scope.html')">
+  <area shape="circle" coords="204,86,55" href="javascript:change('top_data.html', 'data.html')">
+  <area shape="circle" coords="337,86,55" href="javascript:change('top_scenarios.html', 'scenarios.html')">
+  <area shape="circle" coords="470,86,55" href="javascript:change('top_analyze.html', 'analyze.html')">
+  <area shape="circle" coords="603,86,55" href="javascript:change('top_synthesize.html', 'synthesize.html')">
+  <area shape="circle" coords="736,86,55" href="javascript:change('top_communicate.html', 'communicate.html')">
 </map>
 </center>
 We encourage you to explore the six steps of this approach by clicking the menu links in the left panel.  The approach is organized by standard decision and analytical steps in a science-policy process of engagement. <b><u>For each step</u></b> we provide some combination of the following elements:
@@ -151,7 +160,7 @@ We encourage you to explore the six steps of this approach by clicking the menu 
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>NatCap Marine Planning Use-Cases</h2>
-Learning about different marine planning projects can highlight methods and tools that can be adapted to your own projects. The <a href="http://www.naturalcapitalproject.org"  target="_blank">Natural Capital Project</a> (or "NatCap") has compiled lessons from seven <a href="contact.html"><b>use-cases</b></a> in which we have been involved around the world. At the bottom of each step's page, we summarize how that step was accomplished for select use-cases. We also offer links to additional resources for exploring examples from around the world.
+Learning about different marine planning projects can highlight methods and tools that can be adapted to your own projects. The <a href="http://www.naturalcapitalproject.org"  target="_blank">Natural Capital Project</a> (or "NatCap") has compiled lessons from seven <a href="javascript:change('top.html', 'contact.html#use-cases')"><b>use-cases</b></a> in which we have been involved around the world. At the bottom of each step's page, we summarize how that step was accomplished for select use-cases. We also offer links to additional resources for exploring examples from around the world.
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
@@ -162,11 +171,9 @@ Learning about different marine planning projects can highlight methods and tool
                 <font color="white">
                 <i>January 2016</i>
                 <p></p>
-                <p align="left">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Call for Abstracts: <a href="https://natcap2016.wordpress.com" target="_blank">2016 Natural Capital Symposium</a><br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Leave us your comments and <a href="feedback.html">feedback</a><br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Contribute to the <a href="gallery.html">gallery</a> by uploading your visuals</a>
-                </p>
+                Call for Abstracts: <a href="https://natcap2016.wordpress.com" target="_blank">2016 Natural Capital Symposium</a><br>
+            	<a href="javascript:change('top.html', 'feedback.html')">Feedback</a> in new discussion board<br>
+                Contribute to the <a href="javascript:change('top.html', 'gallery.html')">Gallery:</a> Upload your MP visuals</a>
                 </font>
                 <div class="popup_img">
                         <img src="img/close.png" class="close"/>
